--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -1,15 +1,17 @@
-add_executable(luf_fw WIN32
+add_executable(lauf_fw WIN32
     main.cpp
     require.cpp
     filesystem.cpp
+    http.cpp
 )
 
-target_link_libraries(luf_fw PRIVATE
+target_link_libraries(lauf_fw PRIVATE
     Luau.VM
     Luau.Common
     Luau.Compiler
     Luau.Config
     Luau.CodeGen
     Luau.CLI.lib
+    httplib
 )
-set_target_properties(luf_fw PROPERTIES OUTPUT_NAME luf)
+set_target_properties(lauf_fw PROPERTIES OUTPUT_NAME lauf)
