--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "luau"]
 	path = luau
 	url = https://github.com/luau-lang/luau
+[submodule "extern/httplib"]
+	path = extern/httplib
+	url = https://github.com/yhirose/cpp-httplib
