--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(executable
     filesystem.cpp
     json.cpp
     fileio.cpp
-    file_writer.cpp
+    filewriter.cpp
     path.cpp
 )
 
