--- a/.luaurc
+++ b/.luaurc
@@ -1,6 +1,6 @@
 {
     "languageMode": "strict",
     "aliases": {
-        "guitest": "~/.dluau/require/guitest/"
+        "auxiliary": "./auxiliary/"
     }
 }
