clean up code logic and files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,13 @@
 add_executable(executable
     cli.cpp
-    state_setup.cpp
-    filesystem.cpp
-    json.cpp
-    fileio.cpp
-    consoleio.cpp
-    filewriter.cpp
-    path.cpp
-    process.cpp
+    state.cpp
+    lib/filesystem.cpp
+    lib/json.cpp
+    lib/fileio.cpp
+    lib/consoleio.cpp
+    lib/process.cpp
+    type/filewriter.cpp
+    type/path.cpp
 )
 
 target_link_libraries(executable PRIVATE
@@ -20,4 +20,5 @@ target_link_libraries(executable PRIVATE
     httplib
     nlohmann_json::nlohmann_json
 )
+target_include_directories(executable PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(executable PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
