--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "luau"]
-	path = luau
-	url = https://github.com/luau-lang/luau
 [submodule "extern/httplib"]
 	path = extern/httplib
 	url = https://github.com/yhirose/cpp-httplib
 [submodule "extern/nlohmann_json"]
 	path = extern/nlohmann_json
 	url = https://github.com/nlohmann/json
+[submodule "extern/luau"]
+	path = extern/luau
+	url = https://github.com/luau-lang/luau
