--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # language
-add_subdirectory(luau)
+add_subdirectory(extern/luau)
 add_subdirectory(extern/httplib)
 add_subdirectory(extern/nlohmann_json)
 
