--- a/src/executable/CMakeLists.txt
+++ b/src/executable/CMakeLists.txt
@@ -5,11 +5,9 @@ add_executable(executable
     lib_impl/filesystem.cpp
     lib_impl/io.cpp
     lib_impl/process.cpp
-    lib_impl/garbage.cpp
-    type_impl/file_writer.cpp
+    type_impl/filewriter.cpp
     type_impl/writer.cpp
     type_impl/path.cpp
-    type_impl/result.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/ReplRequirer.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/RequirerUtils.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/Coverage.cpp
