file restructure + rename project

--- a/src/executable/CMakeLists.txt
+++ b/src/executable/CMakeLists.txt
@@ -2,14 +2,14 @@ add_executable(executable
     cli.cpp
     state.cpp
     require.cpp
-    fslib.cpp
-    iolib.cpp
-    httplib.cpp
-    jsonlib.cpp
-    oslib.cpp
-    iotypes.cpp
-    fstypes.cpp
-    httptypes.cpp
+    filesystem_library.cpp
+    io_library.cpp
+    http_library.cpp
+    json_library.cpp
+    process_library.cpp
+    io_types.cpp
+    filesystem_types.cpp
+    http_types.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/ReplRequirer.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/RequirerUtils.cpp
     ${CMAKE_SOURCE_DIR}/extern/luau/CLI/src/Coverage.cpp
